--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-		<h1 class="project-name">java.woniper.com</h1>
+		<h1 class="project-name">java.woniper.net</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
