--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a href="http://blog.woniper.net">
 	<img src="image/blog.png" />	
 </a>
-<a href="https://www.facebook.com/profile.php?id=100001835042001">
+<a href="https://www.facebook.com/woniper">
 	<img src="image/facebook.png" />	
 </a>
 
