--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>My Link</h3>
 
-<a href="https://github.com/woniper">
+<a href="https://github.com/woniper" target="_blank">
 	<img src="image/github.png" />
 </a>
-<a href="http://blog.woniper.net">
+<a href="http://blog.woniper.net" target="_blank">
 	<img src="image/blog.png" />	
 </a>
-<a href="https://www.facebook.com/woniper">
+<a href="https://www.facebook.com/woniper" target="_blank">
 	<img src="image/facebook.png" />	
 </a>
 
